--- a/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
+++ b/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
@@ -1,94 +1,94 @@
-<main class="container mt-3" style="height: 85vh;">
-  <div class="row justify-content-center">
-    <div class="card col-lg-10">
-      <div class="form-container">
-        <h5 class="text-center mb-1 mt-1">
-          Cadastro de Professor<br />Fatec Votorantim
-        </h5>
-        <form class="row g-3" (submit)="professorService.cadastrar($event,
-            nome.value,
-            matriculaId.value,
-            unidadeID.value,
-            titulacao.value,
-            referencia.value,
-            lattes.value,
-            cursosSelecionados,
-            statusAtividade.value,
-            email.value,
-            notes.value
-          )">
-          <div class="col-md-3">
-            <label for="inputNome" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="inputNome" name="inputNome" required #nome
-              placeholder="Nome Completo" />
-            <!-- <p id="validacaoNome" class="validacao">Somente letras são permitidas.</p> -->
-          </div>
-          <div class="col-md-3">
-            <label for="inputEmail" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="inputEmail" name="inputEmail" required #email
-              placeholder="E-mail" />
-          </div>
-          <div class="col-md-3">
-            <label for="inputTitulacao" class="form-label">Titulação</label>
-            <select id="inputTitulacao" class="form-select" name="inputTitulacao" required #titulacao>
-              <option disabled selected>Selecione</option>
-              <option value="Especialista">Especialista</option>
-              <option value="Mestre">Mestre</option>
-              <option value="Doutor">Doutor</option>
-
-            </select>
-          </div>
-          <div class="col-md-3">
-            <label for="inputNumeroMatricula" class="form-label">Número Matrícula</label>
-            <input type="number" class="form-control" id="matriculaId" name="inputNumeroMatricula" required
-              placeholder="Número da Matrícula" min="0" inputmode="numeric" #matriculaId />
-            <!-- <p id="validacaoNome" class="validacao">Somente números são permitidos.</p> -->
-          </div>
-          <div class="col-md-3">
-            <label for="inputCodigoUESede" class="form-label">Código UE</label>
-            <select id="inputCodigoUESede" class="form-select" required name="inputCodigoUESede" required #unidadeID>
-              <option disabled selected>Selecione</option>
-              <option >301 - Votorantim</option>
-              <option >123 - Sorocaba</option>
-              <option>900 - Tatuí</option>
-            </select>
-          </div>
-          <div class="col-md-3">
-            <label for="inputCurriculumLates" class="form-label">Lattes (URL)</label>
-            <input type="url" class="form-control" id="inputCurriculumLates" name="inputCurriculumLates" required
-              #lattes placeholder="Ex: http:/www.lattes.com.br" />
-          </div>
-          <div class="col-md-3">
-            <label for="inputReferencia" class="form-label">Referência</label>
-            <input type="text" class="form-control" id="inputReferencia" placeholder="Ex: PES I - A" name="inputReferencia" required #referencia />
-          </div>
-          <div class="col-md-3">
-            <label for="inputNotes" class="form-label">Observações</label>
-            <input type="text" class="form-control" id="inputNotes" name="inputNotes" #notes
-              placeholder="Observações" />
-          </div>
-          <div class="col-md-3">
-            <label class="form-label">Cursos</label>
-            <div class="form-check" *ngFor="let curso of cursos">
-              <input class="form-check-input" type="checkbox" id="{{curso._id}}" [value]="curso._id" (change)="toggleCurso(curso._id)">
-              <label class="form-check-label" for="{{curso._id}}">{{curso.sigla}}</label>
+<main class="d-flex align-items-center justify-content-center" style="height: 85vh;">
+  <div class="container mt-3">
+    <div class="row justify-content-center">
+      <div class="card col-12 col-lg-10">
+        <div class="form-container p-4">
+          <h5 class="text-center mb-1 mt-1">
+            Cadastro de Professor<br />Fatec Votorantim
+          </h5>
+          <form class="row g-3" (submit)="professorService.cadastrar($event,
+              nome.value,
+              matriculaId.value,
+              unidadeID.value,
+              titulacao.value,
+              referencia.value,
+              lattes.value,
+              cursosSelecionados,
+              statusAtividade.value,
+              email.value,
+              notes.value
+            )">
+            <div class="col-md-3">
+              <label for="inputNome" class="form-label">Nome</label>
+              <input type="text" class="form-control" id="inputNome" name="inputNome" required #nome
+                placeholder="Nome Completo" />
+              <!-- <p id="validacaoNome" class="validacao">Somente letras são permitidas.</p> -->
             </div>
-          </div>
-
-          <div class="col-md-3">
-            <label for="inputstatusAtividade" class="form-label">Ativo?</label>
-            <select id="inputstatusAtividade" class="form-select" required name="inputstatusAtividade" required
-              #statusAtividade>
-              <option selected>Ativo</option>
-              <option>Desativado</option>
-            </select>
-          </div>
-          <div class="col-12 text-center mt-2">
-            <button type="submit" class="btn btn-secondary mb-5" style="width: fit-content">
-              Cadastrar
-            </button>
-          </div>
-        </form>
+            <div class="col-md-3">
+              <label for="inputEmail" class="form-label">E-mail</label>
+              <input type="email" class="form-control" id="inputEmail" name="inputEmail" required #email
+                placeholder="E-mail" />
+            </div>
+            <div class="col-md-3">
+              <label for="inputTitulacao" class="form-label">Titulação</label>
+              <select id="inputTitulacao" class="form-select" name="inputTitulacao" required #titulacao>
+                <option disabled selected>Selecione</option>
+                <option value="Especialista">Especialista</option>
+                <option value="Mestre">Mestre</option>
+                <option value="Doutor">Doutor</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <label for="inputNumeroMatricula" class="form-label">Número Matrícula</label>
+              <input type="number" class="form-control" id="matriculaId" name="inputNumeroMatricula" required
+                placeholder="Número da Matrícula" min="0" inputmode="numeric" #matriculaId />
+              <!-- <p id="validacaoNome" class="validacao">Somente números são permitidos.</p> -->
+            </div>
+            <div class="col-md-3">
+              <label for="inputCodigoUESede" class="form-label">Código UE</label>
+              <select id="inputCodigoUESede" class="form-select" required name="inputCodigoUESede" required #unidadeID>
+                <option disabled selected>Selecione</option>
+                <option>301 - Votorantim</option>
+                <option>123 - Sorocaba</option>
+                <option>900 - Tatuí</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <label for="inputCurriculumLates" class="form-label">Lattes (URL)</label>
+              <input type="url" class="form-control" id="inputCurriculumLates" name="inputCurriculumLates" required
+                #lattes placeholder="Ex: http:/www.lattes.com.br" />
+            </div>
+            <div class="col-md-3">
+              <label for="inputReferencia" class="form-label">Referência</label>
+              <input type="text" class="form-control" id="inputReferencia" placeholder="Ex: PES I - A" name="inputReferencia" required #referencia />
+            </div>
+            <div class="col-md-3">
+              <label for="inputNotes" class="form-label">Observações</label>
+              <input type="text" class="form-control" id="inputNotes" name="inputNotes" #notes
+                placeholder="Observações" />
+            </div>
+            <div class="col-md-3">
+              <label class="form-label">Cursos</label>
+              <div class="form-check" *ngFor="let curso of cursos">
+                <input class="form-check-input" type="checkbox" id="{{curso._id}}" [value]="curso._id" (change)="toggleCurso(curso._id)">
+                <label class="form-check-label" for="{{curso._id}}">{{curso.sigla}}</label>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <label for="inputstatusAtividade" class="form-label">Ativo?</label>
+              <select id="inputstatusAtividade" class="form-select" required name="inputstatusAtividade" required
+                #statusAtividade>
+                <option selected>Ativo</option>
+                <option>Desativado</option>
+              </select>
+            </div>
+            <div class="col-12 text-center mt-2">
+              <button type="submit" class="btn btn-secondary mb-5" style="width: fit-content">
+                Cadastrar
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
