--- a/src/app/components/Login/tela-inicio/tela-inicio.component.html
+++ b/src/app/components/Login/tela-inicio/tela-inicio.component.html
@@ -1,7 +1,6 @@
-<div class="container" style="height: 100vh;">
-    <div class="row">
-      <div class="col-md-6 offset-md-3 mt-4">
-        <div class="card mt-4">
+<div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
+      <div class="col-md-6">
+        <div class="card">
           <div class="card-header text-center">
             <img class="img-fluid" src="../../../assets/logoFatecCapi.png" alt="">
             <h3>Bem-vindo!</h3>
@@ -12,7 +11,6 @@
               <p class="mt-3">Ainda não tem uma conta?</p>
               <a class="btn" routerLink="/tela-cadastro-usuario">Cadastre-se aqui!</a>
             </div>
-          </div>
         </div>
       </div>
     </div>
