--- a/src/app/components/Central/tela-professor/tela-professor.component.html
+++ b/src/app/components/Central/tela-professor/tela-professor.component.html
@@ -1,37 +1,35 @@
-<main class="container mt-5" style="height: 75vh;">
-  <div class="row justify-content-center">
-    <div class="col-lg-10">
-      <h2 class="text-center mb-4" style="font-weight: bold">
-        {{professor.nome}}
-      </h2>
+<main class="d-flex align-items-center justify-content-center" style="height: 75vh;">
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <h2 class="text-center mb-4" style="font-weight: bold">
+          {{professor.nome}}
+        </h2>
 
-      <div class="table-responsive">
-        <table class="table table-striped table-bordered text-center">
-          <thead class="table-dark">
-            <tr>
-              <th>E-mail</th>
-              <th>Titulação</th>
-              <th>Número da Matrícula</th>
-              <th>Curriculum Lattes</th>
-              <th>Código da UE - SEDE</th>
-              <th>Referência</th>
-            </tr>
-          </thead>
-          <tbody>
-
-            <tr>
-              <td>{{ professor.email }}</td>
-              <td>{{ professor.titulacao }}</td>
-              <td>{{ professor.matriculaId }}</td>
-              <td>{{ professor.lattes }}</td>
-              <td>{{ professor.unidadeId }}</td>
-              <td>{{ professor.referencia }}</td>
-
-
-            </tr>
-          </tbody>
-
-        </table>
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered text-center">
+            <thead class="table-dark">
+              <tr>
+                <th>E-mail</th>
+                <th>Titulação</th>
+                <th>Número da Matrícula</th>
+                <th>Curriculum Lattes</th>
+                <th>Código da UE - SEDE</th>
+                <th>Referência</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>{{ professor.email }}</td>
+                <td>{{ professor.titulacao }}</td>
+                <td>{{ professor.matriculaId }}</td>
+                <td>{{ professor.lattes }}</td>
+                <td>{{ professor.unidadeId }}</td>
+                <td>{{ professor.referencia }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
