--- a/src/app/components/Login/tela-cadastro-usuario/tela-cadastro-usuario.component.html
+++ b/src/app/components/Login/tela-cadastro-usuario/tela-cadastro-usuario.component.html
@@ -1,40 +1,44 @@
-<div class="container" style="height: 100vh;">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 mt-4">
-            <div class="card mt-4">
-                <div class="row no-gutters m-2">
-                    <div class="col-md-4 bg-light d-flex align-items-center justify-content-center">
-                        <img class="img-fluid" src="../../../assets/logoFatecCapi.png" alt="Logo fatec votorantim" style="max-height: 90px; max-width: 100%; height: auto;">
+<div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
+    <div class="col-md-8">
+        <div class="card">
+            <div class="row no-gutters m-2">
+                <div class="col-md-4 bg-light d-flex align-items-center justify-content-center">
+                    <img class="img-fluid" src="../../../assets/logoFatecCapi.png" alt="Logo fatec votorantim"
+                        style="max-height: 90px; max-width: 100%; height: auto;">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-header">
+                        <h4 class="text-center">Cadastro de Usuário</h4>
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-header">
-                            <h4 class="text-center">Cadastro de Usuário</h4>
-                        </div>
-                        <div class="card-body">
-                            <form (submit)="usuarioService.cadastrarUsuario($event, username.value, email.value, password.value)">
-                                <div class="form-group">
-                                    <label for="userName">Nome:</label>
-                                    <input type="text" class="form-control" id="userName" #username placeholder="Digite seu nome" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">E-mail:</label>
-                                    <input type="email" class="form-control" id="email" #email placeholder="Digite seu e-mail" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="password">Senha:</label>
-                                    <input type="password" class="form-control" id="password" #password placeholder="Digite sua senha" required>
-                                </div>
-                                <div class="text-center mt-4">
-                                    <button type="submit" class="btn btn-secondary">Cadastrar</button>
-                                </div>
-                            </form>
-                            <div class="text-center mt-3">
-                                <p>Já tem uma conta?</p>
-                                <a class="btn" routerLink="/tela-login">Faça login aqui!</a>
+                    <div class="card-body">
+                        <form
+                            (submit)="usuarioService.cadastrarUsuario($event, username.value, email.value, password.value)">
+                            <div class="form-group">
+                                <label for="userName">Nome:</label>
+                                <input type="text" class="form-control" id="userName" #username
+                                    placeholder="Digite seu nome" required>
                             </div>
+                            <div class="form-group">
+                                <label for="email">E-mail:</label>
+                                <input type="email" class="form-control" id="email" #email
+                                    placeholder="Digite seu e-mail" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Senha:</label>
+                                <input type="password" class="form-control" id="password" #password
+                                    placeholder="Digite sua senha" required>
+                            </div>
+                            <div class="text-center mt-4">
+                                <button type="submit" class="btn btn-secondary">Cadastrar</button>
+                            </div>
+                        </form>
+                        <div class="text-center mt-3">
+                            <p>Já tem uma conta?</p>
+                            <a class="btn" routerLink="/tela-login">Faça login aqui!</a>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
