atualizar professor funcionando locallll

--- a/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
+++ b/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
@@ -6,18 +6,21 @@
           <h2 class="text-center mb-2" style="font-weight: bold; font-size: 1.25rem;">
             Edição de Professor<br />Fatec Votorantim
           </h2>
-          <form class="row g-3" (submit)="professorService.atualizar(professor._id, professor)">
+          <form class="row g-3" (submit)="atualizarProfessor()">
             <div class="col-md-3">
               <label for="inputNome" class="form-label">Nome</label>
-              <input type="text" class="form-control" id="inputNome" name="inputNome" [(ngModel)]="professor.nome" required />
+              <input type="text" class="form-control" id="inputNome" name="nome" [(ngModel)]="professor.nome"
+                required />
             </div>
             <div class="col-md-3">
               <label for="inputEmail" class="form-label">E-mail</label>
-              <input type="email" class="form-control" id="inputEmail" name="inputEmail" [(ngModel)]="professor.email" required />
+              <input type="email" class="form-control" id="inputEmail" name="email" [(ngModel)]="professor.email"
+                required />
             </div>
             <div class="col-md-3">
               <label for="inputTitulacao" class="form-label">Titulação</label>
-              <select id="inputTitulacao" class="form-select" [(ngModel)]="professor.titulacao" required name="inputTitulacao">
+              <select id="inputTitulacao" class="form-select" [(ngModel)]="professor.titulacao" required
+                name="titulacao">
                 <option disabled>Selecione</option>
                 <option value="Especialista">Especialista</option>
                 <option value="Mestre">Mestre</option>
@@ -26,11 +29,13 @@
             </div>
             <div class="col-md-3">
               <label for="inputNumeroMatricula" class="form-label">Matrícula</label>
-              <input type="number" class="form-control" id="inputNumeroMatricula" name="inputNumeroMatricula" [(ngModel)]="professor.matriculaId" disabled />
+              <input type="number" class="form-control" id="matriculaId" name="inputNumeroMatricula"
+                [(ngModel)]="professor.matriculaId" disabled />
             </div>
             <div class="col-md-3">
               <label for="inputCodigoUESede" class="form-label">Código UE</label>
-              <select id="inputCodigoUESede" class="form-select" required name="inputCodigoUESede" [(ngModel)]="professor.unidadeId">
+              <select id="inputCodigoUESede" class="form-select" required name="unidadeId"
+                [(ngModel)]="professor.unidadeId">
                 <option>301 - Votorantim</option>
                 <option>123 - Sorocaba</option>
                 <option>900 - Tatuí</option>
@@ -38,26 +43,36 @@
             </div>
             <div class="col-md-3">
               <label for="inputCurriculumLates" class="form-label">Lattes (URL)</label>
-              <input type="url" class="form-control" id="inputCurriculumLates" name="inputCurriculumLates" [(ngModel)]="professor.lattes" />
+              <input type="url" class="form-control" id="inputCurriculumLates" name="lattes"
+                [(ngModel)]="professor.lattes" />
             </div>
             <div class="col-md-3">
               <label for="inputReferencia" class="form-label">Referência</label>
-              <input type="text" class="form-control" id="inputReferencia" name="inputReferencia" [(ngModel)]="professor.referencia" />
+              <input type="text" class="form-control" id="inputReferencia" name="inputReferencia"
+                [(ngModel)]="professor.referencia" />
             </div>
             <div class="col-md-3">
               <label for="inputNotes" class="form-label">Observações</label>
-              <input type="text" class="form-control" id="inputNotes" name="inputNotes" [(ngModel)]="professor.notes" placeholder="Observações" />
+              <input type="text" class="form-control" id="inputNotes" name="notes" [(ngModel)]="professor.notes"
+                placeholder="Observações" />
             </div>
+
+
             <div class="col-md-3">
               <label class="form-label">Cursos</label>
               <div class="form-check" *ngFor="let curso of cursos">
-                <input class="form-check-input" type="checkbox" id="{{curso._id}}" [value]="curso._id" (change)="toggleCurso(curso._id)" [checked]="this.cursosids.includes(curso._id)"  [(ngModel)]="professor.coursesId">
+                <input class="form-check-input" type="checkbox" id="{{curso._id}}" [value]="curso._id"
+                       (change)="toggleCurso(curso._id)" [checked]="cursosSelecionados.includes(curso._id)">
                 <label class="form-check-label" for="{{curso._id}}">{{curso.sigla}}</label>
               </div>
             </div>
-            <div class="col-md-3">  
+            
+
+
+            <div class="col-md-3">
               <label for="inputstatusAtividade" class="form-label">Ativo?</label>
-              <select id="inputstatusAtividade" class="form-select" required [(ngModel)]="professor.statusAtividade" name="inputstatusAtividade">
+              <select id="inputstatusAtividade" class="form-select" required [(ngModel)]="professor.statusAtividade"
+                name="statusAtividade">
                 <option selected>Ativo</option>
                 <option>Desativado</option>
               </select>
