--- a/src/app/components/Central/tela-cadastro-curso/tela-cadastro-curso.component.html
+++ b/src/app/components/Central/tela-cadastro-curso/tela-cadastro-curso.component.html
@@ -1,60 +1,61 @@
 <main class="d-flex align-items-center justify-content-center" style="height: 85vh;">
-  <div class="container mt-2">
+    <div class="container mt-2">
       <div class="row justify-content-center">
-          <div class="card col-12 col-lg-8">
-              <div class="form-container p-4">
-                  <h5 class="text-center mb-1 mt-1">
-                      Cadastro de Curso<br />Fatec Votorantim
-                  </h5>
-                  <form class="row g-2"
-                      (submit)="cursoService.cadastrar(nome.value, codigo.value, [disciplinas.value], sigla.value, modalidade.value, professores.values, coordenador.value)">
-                      <div class="col-md-4">
-                          <label for="inputNomeCurso" class="form-label">Nome</label>
-                          <input type="text" class="form-control" id="inputNomeCurso" name="inputNomeCurso" #nome required placeholder="Digite o nome do curso"/>
-                      </div>
-                      <div class="col-md-4">
-                          <label for="inputCodigoCurso" class="form-label">Código</label>
-                          <input type="number" class="form-control" id="inputCodigoCurso" name="inputCodigoCurso" #codigo required placeholder="Digite o código" max="9" maxlength="3" />
-                      </div>
-                      <div class="col-md-4">
-                          <label for="inputSiglaCurso" class="form-label">Sigla</label>
-                          <input type="text" class="form-control" id="inputSiglaCurso" #sigla name="inputSigla" placeholder="Digite a sigla"/>
-                      </div>
-                      <div class="col-md-4">
-                          <label for="inputModalidade">Modalidade</label>
-                          <select name="inputModalidade" id="inputModalidadeCurso" class="form-select" #modalidade>
-                              <option selected disabled>Selecione a modalidade</option>
-                              <option value="Presencial">Presencial</option>
-                              <option value="Híbrido">Híbrido</option>
-                              <option value="EAD">EaD</option>
-                          </select>
-                      </div>
-                      <div class="col-md-4">
-                          <label for="inputProfessores" class="form-label">Professores</label>
-                          <select id="" class="form-select" multiple>
-                              <option selected disabled>Selecione</option>
-                              <option class="form-check" *ngFor="let professor of professores" value="{{professor.id}}">{{professor.nome}}</option>
-                          </select>
-                      </div>
-                      <div class="col-md-4">
-                        <label for="inputCoordenador" class="form-label">Coordenador</label>
-                        <select class="form-select" name="inputCoordenadorCurso" id="inputCoordenadorCurso"
-                            #coordenador>
-                            <option selected disabled>Selecione</option>
-                            <option *ngFor="let professor of professores" value="{{professor.id}}">{{professor.nome}}
-                            </option>
-                        </select>
-                    </div>
-                      <div class="col-md-12">
-                          <label for="inputDisciplinas" class="form-label">Disciplinas</label>
-                          <textarea type="text" class="form-control" id="inputDisciplinasCurso" #disciplinas name="inputDisciplinas" placeholder="Digite as disciplinas que compõem o curso separadas por vírgula."></textarea>
-                      </div>
-                      <div class="col-12 text-center mt-1">
-                          <button type="submit" class="btn btn-secondary mb-5" style="width: fit-content">Cadastrar</button>
-                      </div>
-                  </form>
+        <div class="card col-12 col-lg-8">
+          <div class="form-container p-4">
+            <h5 class="text-center mb-1 mt-1">
+              Cadastro de Curso<br />Fatec Votorantim
+            </h5>
+            <form class="row g-2" (submit)="cadastrarCurso()">
+  
+              <div class="col-md-4">
+                <label for="inputNomeCurso" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="inputNomeCurso" name="inputNomeCurso" #nome required placeholder="Digite o nome do curso" />
               </div>
+              <div class="col-md-4">
+                <label for="inputCodigoCurso" class="form-label">Código</label>
+                <input type="number" class="form-control" id="inputCodigoCurso" name="inputCodigoCurso" #codigo required placeholder="Digite o código" max="9" maxlength="3" />
+              </div>
+              <div class="col-md-4">
+                <label for="inputSiglaCurso" class="form-label">Sigla</label>
+                <input type="text" class="form-control" id="inputSiglaCurso" #sigla name="inputSigla" placeholder="Digite a sigla" />
+              </div>
+              <div class="col-md-4">
+                <label for="inputModalidade">Modalidade</label>
+                <select name="inputModalidade" id="inputModalidadeCurso" class="form-select" #modalidade>
+                  <option selected disabled>Selecione a modalidade</option>
+                  <option value="Presencial">Presencial</option>
+                  <option value="Híbrido">Híbrido</option>
+                  <option value="EAD">EaD</option>
+                </select>
+              </div>
+              <div class="col-md-4">
+                <label for="inputProfessores" class="form-label">Professores</label>
+                <select id="" class="form-select" multiple>
+                  <option selected disabled>Selecione</option>
+                  <option class="form-check" *ngFor="let professor of professores" [value]="professor.id">{{ professor.nome }}</option>
+                </select>
+              </div>
+  
+              <div class="col-md-4">
+                <label for="inputCoordenador" class="form-label">Coordenador</label>
+                <select class="form-select" name="inputCoordenadorCurso" id="inputCoordenadorCurso" [(ngModel)]="coordenador">
+                  <option selected disabled>Selecione</option>
+                  <option *ngFor="let professor of professores" [value]="professor._id">{{ professor.nome }}</option>
+                </select>
+              </div>
+  
+              <div class="col-md-12">
+                <label for="inputDisciplinas" class="form-label">Disciplinas</label>
+                <textarea type="text" class="form-control" id="inputDisciplinasCurso" #disciplinas name="inputDisciplinas" placeholder="Digite as disciplinas que compõem o curso separadas por vírgula."></textarea>
+              </div>
+              <div class="col-12 text-center mt-1">
+                <button type="submit" class="btn btn-secondary mb-5" style="width: fit-content">Cadastrar</button>
+              </div>
+            </form>
           </div>
+        </div>
       </div>
-  </div>
-</main>
+    </div>
+  </main>
+  
