--- a/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
+++ b/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="col-md-3">
-              <label for="inputstatusAtividade" class="form-label">Ativo?</label>
+              <label for="inputstatusAtividade" class="form-label">Status</label>
               <select id="inputstatusAtividade" class="form-select" required name="inputstatusAtividade" required
                 #statusAtividade>
                 <option selected>Ativo</option>
