--- a/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
+++ b/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
@@ -70,7 +70,7 @@
 
 
             <div class="col-md-3">
-              <label for="inputstatusAtividade" class="form-label">Ativo?</label>
+              <label for="inputstatusAtividade" class="form-label">Status</label>
               <select id="inputstatusAtividade" class="form-select" required [(ngModel)]="professor.statusAtividade"
                 name="statusAtividade">
                 <option selected>Ativo</option>
