--- a/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
+++ b/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
@@ -85,7 +85,7 @@
                         <th scope="row">{{curso.nome}}</th>
                         <td>{{curso.sigla}}</td>
                         <td>{{curso.codCourse}}</td>
-                        <td>{{curso.coordenador}}</td>
+                        <td>{{curso.coordenador.nome}}</td>
                         <td>{{curso.modalidade}}</td>
                         <td class="colunaOpcoes">
                             <br />
