--- a/src/app/components/ComponentesVisuais/navbar/navbar.component.html
+++ b/src/app/components/ComponentesVisuais/navbar/navbar.component.html
@@ -33,7 +33,9 @@
                         <li><a class="dropdown-item" routerLink="/tela-cadastro-curso" href="#">Curso</a></li>
                     </ul>
                 </li>
-
+                <li class="nav-item">
+                    <button class="btn btn-danger mt-2 pt-0 pb-0" (click)="logout()">Sair</button>
+                </li>
             </ul>
         </div>
     </div>
