--- a/src/app/components/Central/tela-cadastro-curso/tela-cadastro-curso.component.html
+++ b/src/app/components/Central/tela-cadastro-curso/tela-cadastro-curso.component.html
@@ -1,8 +1,8 @@
 <main class="d-flex align-items-center justify-content-center" style="height: 85vh;">
-    <div class="container mt-2">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="card col-12 col-lg-8">
-          <div class="form-container p-4">
+          <div class="form-container p-2">
             <h5 class="text-center mb-1 mt-1">
               Cadastro de Curso<br />Fatec Votorantim
             </h5>
@@ -50,7 +50,7 @@
                 <textarea type="text" class="form-control" id="inputDisciplinasCurso" #disciplinas name="inputDisciplinas" placeholder="Digite as disciplinas que compõem o curso separadas por vírgula."></textarea>
               </div>
               <div class="col-12 text-center mt-1">
-                <button type="submit" class="btn btn-secondary mb-5" style="width: fit-content">Cadastrar</button>
+                <button type="submit" class="btn btn-secondary mb-4" style="width: fit-content">Cadastrar</button>
               </div>
             </form>
           </div>
