--- a/src/app/components/Central/home/home.component.html
+++ b/src/app/components/Central/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="d-flex align-items-center justify-content-center" style="height: 90vh;">
+<div class="d-flex align-items-center justify-content-center" style="height: 83vh;">
   <div class="container-fluid">
       <main class="row justify-content-center">
-          <div class="card col-10 col-md-8 col-lg-6 mt-4">
+          <div class="card col-10 col-md-8 col-lg-6">
               <!-- Caso não aparecer o gráfico, entrem com npm install chart.js no console -->
               <app-grafico alt="npm install chart.js"></app-grafico>
           </div>
