--- a/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
+++ b/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
@@ -67,11 +67,12 @@
               <input type="text" class="form-control" id="inputNotes" name="inputNotes" #notes
                 placeholder="Observações" />
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 ">
               <label class="form-label">Cursos</label>
-              <div class="form-check" *ngFor="let curso of cursos">
-                <input class="form-check-input" type="checkbox" id="{{curso._id}}" [value]="curso._id" (change)="toggleCurso(curso._id)">
-                <label class="form-check-label" for="{{curso._id}}">{{curso.sigla}}</label>
+              <br>
+              <div class="form-check m-1" style="display: inline-block;" *ngFor="let curso of cursos">
+                <input class="form-check-input"  type="checkbox" id="{{curso._id}}" [value]="curso._id" (change)="toggleCurso(curso._id)">
+                <label class="form-check-label"  for="{{curso._id}}">{{curso.sigla}}</label>
               </div>
             </div>
             <div class="col-md-3">
